// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading matches snapshot (large) 1`] = `
.c0 {
  font-size: 1.5rem;
  font-weight: var(--font-normal);
  line-height: 2.25rem;
  margin: var(--spacing-3x) 0;
}

<ForwardRef
  type="large"
>
  <styled.h2>
    <h2
      className="c0"
    >
      Heading
    </h2>
  </styled.h2>
</ForwardRef>
`;

exports[`Heading matches snapshot (medium) 1`] = `
.c0 {
  font-size: 1.25rem;
  font-weight: var(--font-normal);
  line-height: 2rem;
  margin: var(--spacing-3x) 0;
}

<ForwardRef
  type="medium"
>
  <styled.h3>
    <h3
      className="c0"
    >
      Heading
    </h3>
  </styled.h3>
</ForwardRef>
`;

exports[`Heading matches snapshot (no margin) 1`] = `
.c0 {
  font-size: 1.25rem;
  font-weight: var(--font-normal);
  line-height: 2rem;
  margin: 0;
}

<ForwardRef
  noMargin={true}
  type="medium"
>
  <styled.h3
    noMargin={true}
  >
    <h3
      className="c0"
    >
      Heading
    </h3>
  </styled.h3>
</ForwardRef>
`;

exports[`Heading matches snapshot (small) 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: var(--font-normal);
  line-height: 1.5rem;
  margin: var(--spacing-3x) 0;
}

<ForwardRef
  type="small"
>
  <styled.h4>
    <h4
      className="c0"
    >
      Heading
    </h4>
  </styled.h4>
</ForwardRef>
`;

exports[`Heading matches snapshot (subtitle) 1`] = `
.c0 {
  color: #60666E;
  font-size: 1rem;
  font-weight: var(--font-normal);
  line-height: 1.5rem;
  margin: var(--spacing-3x) 0;
}

<ForwardRef
  type="subtitle"
>
  <styled.h2>
    <h2
      className="c0"
    >
      Heading
    </h2>
  </styled.h2>
</ForwardRef>
`;

exports[`Heading matches snapshot (xlarge) 1`] = `
.c0 {
  font-size: 2rem;
  font-weight: var(--font-normal);
  line-height: 3rem;
  margin: var(--spacing-4x) 0;
}

<ForwardRef
  type="xlarge"
>
  <styled.h1>
    <h1
      className="c0"
    >
      Heading
    </h1>
  </styled.h1>
</ForwardRef>
`;
